<resources>
    <string name="app_name">CySmart</string>
    <string name="loading">Loading</string>
    <string name="title_devices">BLE Devices</string>
    <string name="title_products">Cypress BLE Products</string>
    <string name="title_contact">Contact Us</string>
    <string name="title_about">About</string>
    <string name="bluetooth_pair_start">Pairing started…\nPlease wait…</string>
    <string name="bluetooth_pair">Paired</string>
    <string name="bluetooth_unpair">Not Paired</string>
    <string name="bluetooth_pair_unpair_failed">Pair/Unpair failed</string>
    <string-array name="nav_drawer_items">
        <item>BLE Devices</item>
        <item>Cypress</item>
        <item>About</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_child_home">Home</string>
    <string name="navigation_drawer_child_ble">BLE Products</string>
    <string name="navigation_drawer_child_mobile">CySmart Mobile</string>
    <string name="navigation_drawer_child_contact">Contact Us</string>
    <string name="cab_delete">Delete</string>
    <string name="image_navigation_icon">Navigation icon</string>
    <string name="image_splash_logo">Splash logo</string>
    <string name="image_navigation_drawer_logo">navigation logo</string>
    <string name="image_hrm_measurement_heart">heart rate monitor heart icon</string>
    <string name="image_hrm_ee_icon">heart rate monitor energy icon</string>
    <string name="image_hrm_rr_icon">heart rate monitor rr icon</string>
    <string name="image_health_temp_measurement_heart">health temperature thermometer icon</string>
    <string name="image_battery_service_level">battery level icon</string>
    <string name="image_bluetooth_logo">bluetooth logo</string>
    <string name="image_transmission_background_circle_logo">transmission blue circle</string>
    <string name="image_transmission_foreground_circle_logo">transmission white circle</string>
    <string name="glucose_icon">glucose icon</string>
    <string name="capsense_button_item">CapSense button icon</string>
    <string name="image_actionbar_bg_color">background color</string>
    <string name="image_about_cypress_logo">cypress logo</string>
    <string name="image_blood_pressure">Blood pressure image</string>
    <string name="image_sensor_hub_graph">Sensor hub graph image</string>
    <string name="image_sensor_hub_accelerometer">Sensor hub accelerometer image</string>
    <string name="image_sensor_hub_accelerometer_cube">Sensor hub accelerometer cube image</string>
    <string name="image_sensor_hub_temperature">Sensor hub temperature image</string>
    <string name="image_sensor_hub_battery">Sensor hub battery image</string>
    <string name="image_sensor_hub_pressure">Sensor hub pressure image</string>
    <string name="alert_message_exit">Do you want to exit the application?</string>
    <string name="alert_message_exit_ok">OK</string>
    <string name="alert_message_exit_cancel">Cancel</string>
    <string name="alert_message_connect">Connecting to the device</string>
    <string name="alert_message_log_read">Reading the log file please wait...</string>
    <string name="alert_message_connect_title">Device Connection</string>
    <string name="alert_message_bluetooth_disconnect">The BLE device is disconnected</string>
    <string name="alert_message_bluetooth_reconnect">Please Turn Bluetooth ON</string>
    <string name="alert_message_reconnect">Your connection has been lost.</string>
    <string name="alert_message_wait">Please wait..</string>
    <string name="alert_message_no_internet">No internet connection</string>
    <string name="alert_message_unkown">Do you want to go to GATT DB ?</string>
    <string name="alert_message_yes">Yes</string>
    <string name="alert_message_no">No</string>
    <string name="alert_message_unknown_title">No custom UI available !</string>
    <string name="alert_message_bonding_title">Bonding</string>
    <string name="alert_message_bonding_message">Bonding is in process \n please wait..</string>
    <string name="alert_message_prepare_title">Preparing Notifications</string>
    <string name="alert_message_prepare_message">Enabling all available notifications</string>
    <string name="alert_csc_weight">Please enter a valid weight !</string>
    <string name="alert_title_clear_cache">Clear Bluetooth Cache?</string>
    <string name="alert_message_clear_cache">Will clear all cache information of connected device. Connection will be lost. Do you want to continue?</string>
    <string name="alert_message_delete_log">Do you want to delete this log?</string>
    <string name="alert_message_ota_cancel">Do you want to cancel the OTA update?</string>
    <string name="alert_message_ota_resume">Do you want to resume the OTA Update?</string>
    <string name="alert_message_ota_pending">You have firmware upgrade in progress. Going back will stop the firmware upgrade and disconnect from the device. Do you want to continue?</string>
    <string name="alert_message_ota_user_warning">While firmware upgrade is in progress don\'t press back button or home button. Please stay in the page till the upgrade is complete</string>
    <string name="alert_message_write_error">Error occured in writing data.</string>
    <string name="alert_message_ota_error">Firmware update canceled\nError: </string>
    <string name="alert_message_write_error_code">Error code:</string>
    <string name="alert_message_try_again">Please try again.</string>
    <string name="alert_message_hid_warning">HID service related access may be restricted by the OS. Accessing the associated characteristics and descriptor may cause the app to crash</string>
    <string name="device_unknown">Unknown device</string>
    <string name="device_ble_not_supported">Bluetooth Low Energy not supported on device</string>
    <string name="device_bluetooth_on">Bluetooth turned on successfully</string>
    <string name="device_bluetooth_not_supported">Bluetooth not supported on device</string>
    <string name="device_signal_strength">RSSI:</string>
    <string name="device_signal_strength_unit">dBm</string>
    <string name="profile_control_unknown_service">Unknown Service</string>
    <string name="profile_control_no_device_message">Pull down to refresh…</string>
    <string name="profile_control_device_scanning">Refreshing, Please wait…</string>
    <string name="profile_control_delay_message">Cannot connect to the device</string>
    <string name="profile_control_stop_notification_toast">Notifications disabled</string>
    <string name="profile_control_stop_indication_toast">Indications disabled</string>
    <string name="profile_control_stop_both_notify_indicate_toast">All indications and notifications disabled</string>
    <string name="hrm_data_unit">bpm</string>
    <string name="hrm_graph_title">Heart Rate Vs Time </string>
    <string name="hrm_graph_label">Heart Rate (bpm)</string>
    <string name="hrm_sensor_location">Sensor Location:</string>
    <string name="hrm_ee_unit">kcal</string>
    <string name="hrm_ee_text">Energy Expended</string>
    <string name="hrm_rr_unit">s</string>
    <string name="hrm_rr_unit_text">RR-Interval</string>
    <string name="health_temperature_graph">Health Thermometer</string>
    <string name="health_temperature_garaph_title">Temperature Vs Time </string>
    <string name="health_temperature_time">Time (s)</string>
    <string name="health_temperature_temperature">Temperature (°C)</string>
    <string name="body">Body (general)</string>
    <string name="ear">Ear (usually ear lobe)</string>
    <string name="finger">Finger</string>
    <string name="intestine">Gastro-intestinal Tract</string>
    <string name="mouth">Mouth</string>
    <string name="rectum">Rectum</string>
    <string name="tympanum">Tympanum (ear drum)</string>
    <string name="toe_1">Toe</string>
    <string name="toe_2">Toe</string>
    <string name="reserverd">Reserved for future use</string>
    <string name="glucose_time">Recording Time :</string>
    <string name="glucose_type">Type :</string>
    <string name="glucose_sample_location">Sample Location :</string>
    <string name="cysmart_version">CySmart 1.1.0.38</string>
    <string name="cysmart_copyright">Copyright © 2014-2015</string>
    <string name="cypress_semiconductors">Cypress Semiconductor</string>
    <string name="cypress_semiconductors_address">Address:\nCypress Semiconductor Inc.\n198 Champion Court\nSan Jose, CA - 95134\nUSA</string>
    <string name="cypress_semiconductors_phone">Customer Support: 1–408–943–2600\nE-Mail: customercare@cypress.com</string>
    <string name="div_manufacturer_name">Manufacturer Name </string>
    <string name="div_model_name">Model Number </string>
    <string name="div_serial_name">Serial Number </string>
    <string name="div_hardware_name">Hardware Revision </string>
    <string name="div_firmware_name">Firmware Revision </string>
    <string name="div_software_name">Software Revision </string>
    <string name="div_system_name">System ID </string>
    <string name="div_regulatory_name">Regulatory Certification Data List </string>
    <string name="div_pnp_name">PnP ID </string>
    <string name="gatt_services_heading">Services</string>
    <string name="gatt_services_read">Read</string>
    <string name="gatt_services_write">Write</string>
    <string name="gatt_services_notify">Notify</string>
    <string name="gatt_services_indicate">Indicate</string>
    <string name="gatt_services_details">Details</string>
    <string name="gatt_descriptors_details">Descriptor Details</string>
    <string name="gatt_services">Service</string>
    <string name="gatt_charateristic">Characteristic</string>
    <string name="gatt_descriptor">Descriptor</string>
    <string name="gatt_descriptor_hex_value">Descriptor HEX Value</string>
    <string name="gatt_descriptor_value">Descriptor Value</string>
    <string name="gatt_services_ascii">ASCII</string>
    <string name="gatt_services_hex">HEX</string>
    <string name="gatt_services_date">Date</string>
    <string name="gatt_services_time">Time</string>
    <string name="gatt_services_stop_notify">Stop Notify</string>
    <string name="gatt_services_stop_indicate">Stop Indicate</string>
    <string name="gatt_details_popup_ok">OK</string>
    <string name="gatt_details_popup_cancel">Cancel</string>
    <string name="gatt_details_popup_heading">Enter Hex values</string>
    <string name="gatt_details_descriptors">Descriptors</string>
    <string name="data_logger_no_log">No Logs Found</string>
    <string name="data_logger_directory">CySmart</string>
    <string name="data_logger_characteristic_ascii_value">Characteristic ASCII value </string>
    <string name="data_logger_characteristic_hex_value">Characteristic HEX value </string>
    <string name="data_logger_history">History</string>
    <string name="data_logger_timestamp">Showing data logs upto "</string>
    <string name="data_logger_scroll_end">Scroll down</string>
    <string name="proximity">CapSense Proximity</string>
    <string name="slider">CapSense Slider</string>
    <string name="buttons">CapSense Buttons</string>
    <string name="profile_control_fragment">Services</string>
    <string name="capsense">CapSense</string>
    <string name="graph">Graph</string>
    <string name="log">Log</string>
    <string name="share">Share</string>
    <string name="search_title">Search Devices</string>
    <string name="rdk_microphone">MICROPHONE DATA</string>
    <string name="format">FORMAT</string>
    <string name="value">VALUE</string>
    <string name="speech_text">SPEECH TO TEXT</string>
    <string name="record">RECORD</string>
    <string name="hex">HEX</string>
    <string name="convert">CONVERT</string>
    <string name="change_api">CHANGE API KEY</string>
</resources>