<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:showAsAction="always"
        android:title="@string/share" />
    <!--  android:actionProviderClass="android.widget.ShareActionProvider" -->

    <item
        android:id="@+id/log"
        android:icon="@drawable/document_icon"
        android:showAsAction="always"
        android:title="@string/log" />
    <item
        android:id="@+id/graph"
        android:icon="@drawable/graph"
        android:showAsAction="always"
        android:title="@string/graph" />

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/search_white_icon"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search_title" />
    <item
        android:id="@+id/sharelogger"
        android:icon="@drawable/share"
        android:showAsAction="always"
        android:visible="false"
        android:title="@string/share" />

    <item
        android:id="@+id/clearcache"
        android:icon="@drawable/delete_normal"
        android:showAsAction="always"
        android:visible="false"
        android:title="@string/share" />
</menu>
